Added AWS hook-up for demo test

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,18 @@ before_install:
 
 script:
   - docker run -e CI=true christianroth/docker-react npm run test
-  
+
 language: generic
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-210699493367"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
